setup for swiffer portfolio content, leftover to do swiffer image redesign

--- a/projects/car2go-cityline-illustration.html
+++ b/projects/car2go-cityline-illustration.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="car2go CityLine by Loogart">
     <meta property="og:description" content="CityLine illustration for car2go in Montreal">
     <meta property="og:url" content="http://loogart.com/">
-    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/portfolio/car2go/car2go-cityline-2.jpg.jpg">
+    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/portfolio/car2go/car2go-cityline-2.jpg">
     <link rel="icon" href="favicon.ico">
 
     <title>car2go CityLine Illustration | Loogart</title>
@@ -93,6 +93,7 @@
                         <div class="carousel-cell">
                             <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-2-blue-sky.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
                         </div>
+                        <div class="carousel-cell"></div>
                     </div>
                 </div>
             </div>
@@ -102,9 +103,9 @@
                 <div class="col-md-6 col-md-offset-3">
                     <h3>The Smart Car</h3>
                     <p>Using car2go's branding, color palette and popular Smart Car vehicle, Loogart was able to integrate the Montreal scene with the company's visual cues. The Smart Car was illusrated in the style of the the CityLine with bold lines and circular anchors.</p>
-                    <img class="img-responsive" src="../img/portfolio/car2go/car2go-car-real.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/car2go/car2go-car-real.jpg" data-action="zoom">
                     <p>Loogart's version of car2go' Smart Car can be seen below.</p>
-                    <img class="img-responsive img-portfolio" src="../img/portfolio/car2go/car2go-smart-car.png" data-action="zoom" style="margin:69px auto;max-width:280px">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/car2go/car2go-smart-car.png" data-action="zoom" style="max-width:280px">
                 </div>
             </div>
 
