--- a/projects/ets-cityline-illustration.html
+++ b/projects/ets-cityline-illustration.html
@@ -88,7 +88,7 @@
                 <div class="carousel">
                     <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/ets/ets-cityline-full.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                            <img class="img-portfolio img-spacing" src="../img/portfolio/ets/ets-cityline-full.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
                         </div>
                         <div class="carousel-cell"></div>
                     </div>
@@ -102,7 +102,7 @@
                     <p>The illustration is destined to be part of the University's social media campaign, more specifically Facebook and Snapchat. Using the Snapchat geofilter feature, the University will be able to engage more students in its programs and activities.</p>
                     <img class="img-responsive img-portfolio" src="../img/portfolio/ets/ets-phone-mockup.png" data-action="zoom">
                     <p>The Cityline is also produced on University apparel sold onsite such as shirts and mugs.</p>
-                    <img class="img-responsive" src="../img/portfolio/ets/ets-apparel.jpeg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/ets/ets-apparel.jpeg" data-action="zoom">
                 </div>
             </div>
 
