--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -114,11 +114,11 @@
                 <div class="col-md-6 col-md-offset-3">
                     <h3>Layered design</h3>
                     <p>The cityscapes were then superimposed onto photographs of three different forms of coffee: latte, coffee bean and espresso. This created the underlying design of the marketing text.</p>
-                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
                     <p> Additionally, I created 3 custom icons of a mug, a coffee bean and a cup to be used with the text.</p>
-                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/3icons.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/starbucks/3icons.jpg" data-action="zoom">
                     <p>The final artwork will include the coffee pattern photography, the cityscape illustrations, the icons, text written in a combination of two fonts dressed in white and the company logo.</p>
-                    <img class="img-responsive img-portfolio" src="../img/portfolio/starbucks/starbucks-artwork-3.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/starbucks/starbucks-artwork-3.jpg" data-action="zoom">
                 </div>
             </div>
             <div class="row">
