--- a/projects/swiffer-marketing-graphics.html
+++ b/projects/swiffer-marketing-graphics.html
@@ -8,7 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Marketing visuals produced for Swiffer with Citizen Relations with a modified version of the Loogart Montreal CityLine.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="Swiffer Marketing Creatives">
+    <meta property="og:description" content="Swiffer Marketing Visuals for 2016 Canada Moving Day">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/portfolio/swiffer/swiffer-visual-moving-day-loogart.jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>Swiffer Marketing Visuals | Loogart</title>
 
@@ -53,87 +57,68 @@
 
     <!-- champion image -->
     <div class="project-jumbotron project-swiffer-img">
-
-
     </div>
 
+    <div class="container-fluid">
 
-    <div class="container">
-
-        <!-- Jumbotron section -->
-
+        <!-- back to home page -->
         <div class="row">
-            <div class="container">
+            <div class="col-md-6 col-md-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>Swiffer Marketing Visuals</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
 
-
-        <!-- Portfolio section -->
-
+        <!-- Content section -->
         <section class="portfolio-content">
 
+            <!-- First section: Starbucks Montreal -->
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/swiffer-logo.png" style="width:200px">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-6 col-md-offset-3">
+                    <img class="img-responsive" src="../img/swiffer-logo.png" style="max-width:244px;margin:30px 0">
+                    <h1>Swiffer Marketing Visuals</h1>
+                    <p>Swiffer worked with Loogart and Citizen Relations to develop social media creatives utilizing the <a href="../projects/montreal-cityline-illustration.html">Montreal CityLine design</a> for their 2016 Canada Moving Day campaign in Montreal.</p>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-12">
-                    <h3>Title Full</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                </div>
-
-
             </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
             <div class="row">
-                <div class="container">
-                    <h3>Photography of final project</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
+                <div class="carousel">
+                    <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-2.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                        </div>
+                        <div class="carousel-cell"></div>
                     </div>
                 </div>
             </div>
+
+            <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>Branding and texture</h3>
+                    <p>The key components which made the existing Montreal CityLine fit within the Swiffer visual ecosystem were a proper use of their branding color palette. We also opted to give the design a hand-drawn dusty look to express the "out with the old, in with the new" which aligns with Swiffer's commitment to clean.</p>
+                    <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-visual-moving-day-loogart.jpg" data-action="zoom">
+                    <p>The creative was used on social media prior to Moving Day in Montreal.</p>
+                    <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-social-media-looogart.png" data-action="zoom">
+                </div>
+            </div>
+
+            <!-- fourth section: Story about artwork -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h3>On the street</h3>
+                    <p>The design was transposed onto trucks on Moving Day 2016 and Swiffer went around Montreal giving out some of their products and promotional items. </p>
+                    <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-trucks-loogart-1.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-trucks-loogart-2.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-trucks-loogart-3.jpg" data-action="zoom">
+                </div>
+            </div>
+
+
+
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
@@ -144,6 +129,7 @@
 
     </div>
     <!-- /container -->
+
 
     <!-- footer -->
     <footer>
@@ -195,6 +181,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/loogart.js"></script>
 </body>
 
