completed swiffer and UPA portfolio content

--- a/projects/car2go-cityline-illustration.html
+++ b/projects/car2go-cityline-illustration.html
@@ -63,7 +63,8 @@
 
         <!-- back to home page -->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
@@ -75,7 +76,8 @@
 
             <!-- First section: Starbucks Montreal -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <img class="img-responsive" src="../img/logo-car2go.png" style="max-width:144px;margin:30px 0">
                     <h1>car2go CityLine Illustration</h1>
                     <p>car2go reached out to <a href="http://www.station16gallery.com" target="_blank">Station 16 Art Gallery</a> in Montreal to commission Loogart to create its own CityLine illustration to be used on promotional products for a company event.</p>
@@ -100,7 +102,8 @@
 
             <!-- Second section: Other Cities CityLines -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>The Smart Car</h3>
                     <p>Using car2go's branding, color palette and popular Smart Car vehicle, Loogart was able to integrate the Montreal scene with the company's visual cues. The Smart Car was illusrated in the style of the the CityLine with bold lines and circular anchors.</p>
                     <img class="img-responsive img-spacing" src="../img/portfolio/car2go/car2go-car-real.jpg" data-action="zoom">
@@ -111,7 +114,8 @@
 
             <!-- fourth section: Story about artwork -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>CityLine Versions</h3>
                     <p>The original version had a very strong spotlight on Little Italy due to its contrasting colors and the fact that I included two cars in one design. The final design, where I refined the visual balance, includes the graffiti style "Montreal" text which in my opinion makes the design so much cooler!</p>
                 </div>
