--- a/projects/ets-cityline-illustration.html
+++ b/projects/ets-cityline-illustration.html
@@ -66,7 +66,7 @@
 
         <!-- back to home page -->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
@@ -78,7 +78,7 @@
 
             <!-- First section: Starbucks Montreal -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <img class="img-responsive" src="../img/ets-logo.jpg" style="max-width:100px;margin:30px 0">
                     <h1>ÉTS CityLine Illustration</h1>
                     <p>The Ecole de Technologie Supérieure in Montreal commissioned Loogart to create a CityLine illustration of its most popular landmarks and elements. The university selected all items included in the design. The exercise was to ensure that the overall design stayed true to the ETS brand while coinciding with the CityLine style by Loogart.</p>
@@ -97,7 +97,7 @@
 
             <!-- Second section: Other Cities CityLines -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <h3>Snapchat filter</h3>
                     <p>The illustration is destined to be part of the University's social media campaign, more specifically Facebook and Snapchat. Using the Snapchat geofilter feature, the University will be able to engage more students in its programs and activities.</p>
                     <img class="img-responsive img-portfolio" src="../img/portfolio/ets/ets-phone-mockup.png" data-action="zoom">
@@ -108,7 +108,7 @@
 
             <!-- fourth section: Story about artwork -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                     <h3>Innovation</h3>
                     <p>The ETS differentiate themselves by tailoring their brand to a bold and fresh look which helps them gain traction for student recruitment and increases existing student interaction.</p>
                 </div>
