--- a/projects/swiffer-marketing-graphics.html
+++ b/projects/swiffer-marketing-graphics.html
@@ -63,7 +63,8 @@
 
         <!-- back to home page -->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
@@ -75,7 +76,8 @@
 
             <!-- First section: Starbucks Montreal -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <img class="img-responsive" src="../img/swiffer-logo.png" style="max-width:244px;margin:30px 0">
                     <h1>Swiffer Marketing Visuals</h1>
                     <p>Swiffer worked with Loogart and Citizen Relations to develop social media creatives utilizing the <a href="../projects/montreal-cityline-illustration.html">Montreal CityLine design</a> for their 2016 Canada Moving Day campaign in Montreal.</p>
@@ -85,7 +87,10 @@
                 <div class="carousel">
                     <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
                         <div class="carousel-cell">
-                            <img class="img-portfolio" src="../img/portfolio/car2go/car2go-cityline-2.jpg" alt="ets-montreal-cityline-by-loogart" title="ETS CityLine illustration by Loogart">
+                            <img class="img-portfolio" src="../img/portfolio/swiffer/swiffer-cityline-by-loogart.jpg" alt="swiffer-montreal-cityline-by-loogart" title="Swiffer Montreal CityLine by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/swiffer/swiffer-cityline-by-loogart-zoomer.jpg" alt="swiffer-montreal-cityline-by-loogart" title="Swiffer Montreal CityLine by Loogart">
                         </div>
                         <div class="carousel-cell"></div>
                     </div>
@@ -94,7 +99,8 @@
 
             <!-- Second section: Other Cities CityLines -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>Branding and texture</h3>
                     <p>The key components which made the existing Montreal CityLine fit within the Swiffer visual ecosystem were a proper use of their branding color palette. We also opted to give the design a hand-drawn dusty look to express the "out with the old, in with the new" which aligns with Swiffer's commitment to clean.</p>
                     <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-visual-moving-day-loogart.jpg" data-action="zoom">
@@ -105,7 +111,8 @@
 
             <!-- fourth section: Story about artwork -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>On the street</h3>
                     <p>The design was transposed onto trucks on Moving Day 2016 and Swiffer went around Montreal giving out some of their products and promotional items. </p>
                     <img class="img-responsive img-spacing" src="../img/portfolio/swiffer/swiffer-trucks-loogart-1.jpg" data-action="zoom">
