--- a/projects/upa-cityline-illustration.html
+++ b/projects/upa-cityline-illustration.html
@@ -8,7 +8,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Illustration commissioned by the Union de Producteurs Agricole du Québec (UPA) for a CityLine that includes Montréal landmarks along with farm-related elements, animals and activities.">
     <meta name="author" content="Chris Soueidan of Loogart">
-    <link rel="icon" href="../../favicon.ico">
+    <meta property="og:title" content="CityLines by Loogart">
+    <meta property="og:description" content="CityLine illustration for Ecole de technologie supérieure in Montreal">
+    <meta property="og:url" content="http://loogart.com/">
+    <meta property="og:image" content="http://loogart.com/version2/portfolio/img/portfolio/ets/ets-cityline-full.jpg">
+    <link rel="icon" href="favicon.ico">
 
     <title>UPA CityLine Illustration | Loogart</title>
 
@@ -53,86 +57,96 @@
 
     <!-- champion image -->
     <div class="project-jumbotron project-upa-cityline-img">
-    
+        <div class="col-sm-4 col-sm-offset-4 text-center">
+        </div>
     </div>
 
+    <div class="container-fluid">
 
-    <div class="container">
-
-        <!-- Jumbotron section -->
-
+        <!-- back to home page -->
         <div class="row">
-            <div class="container">
+            <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
-                <h1>UPA CityLine Illustration</h1>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium corrupti ab sapiente quas, aperiam, ducimus ut qui laudantium eveniet atque harum dolore ipsum voluptas ea modi vel dolor nostrum ullam.</h4>
             </div>
         </div>
 
-
-        <!-- Portfolio section -->
-
+        <!-- Content section -->
         <section class="portfolio-content">
 
+            <!-- First section: Starbucks Montreal -->
             <div class="row">
-
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/logo-upa.jpg" style="width:200px">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                    <img class="img-responsive" src="../img/logo-upa.jpg" style="max-width:180px;margin:30px 0">
+                    <h1>UPA CityLine Illustration</h1>
+                    <p>L'Union des Producteurs Agricoles du Québec (UPA) commissioned Loogart to illustrate their 2015 Portes Ouvertes event in the CityLine style while keeping the UPA brand. This design was produced into marketing outreach posters, apparel and a TV commercial aired to all of the Quebec Provice.</p>
                 </div>
-                <div class="col-sm-6">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <h3>Title Half</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident corporis, excepturi magni mollitia itaque eius assumenda illo dignissimos fugit officiis sunt veniam labore iste ratione? Distinctio, sit. Facilis, voluptates, maxime?</p>
-                </div>
-                <div class="col-sm-12">
-                    <h3>Title Full</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum repellendus similique quidem eaque voluptas, aut velit excepturi. Unde rerum, quod quis iure ex, cum voluptas fuga consequuntur minima quisquam voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi minima fuga, voluptas nobis nostrum pariatur hic, placeat reprehenderit dolorem culpa, mollitia vero tempora inventore quod laboriosam quidem odio deserunt reiciendis.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi vel totam labore, magni optio amet illo corporis sequi unde. Ex dicta, mollitia temporibus officia exercitationem! Blanditiis quos iusto dicta et.</p>
-                    <img class="img-responsive img-portfolio" src="../img/" data-action="zoom">
-                </div>
-                <div class="col-sm-12">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem incidunt alias, dolore ex deserunt officia voluptatibus, autem suscipit est, aspernatur porro animi inventore natus ad molestias placeat officiis. Mollitia, architecto.</p>
-                </div>
-
-
             </div>
-
-        </section>
-
-
-        <!-- Portfolio scroller section -->
-
-        <section class="portfolio-content">
             <div class="row">
-                <div class="container">
-                    <h3>Photography of final project</h3>
-                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsa itaque ipsum velit quam officiis repudiandae molestiae, laborum voluptatibus tenetur, reiciendis, neque iure possimus perspiciatis obcaecati consectetur facere. Distinctio, provident!</h4>
-                    <div class="scroll">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
-                        <img class="img-portfolio-scroller" src="../img/">
+                <div class="carousel">
+                    <div class="upa-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/upa/upa-cityline-2015.jpg" alt="upa-portes-ouvertes-2015-cityline-by-loogart" title="2015 UPA Portes Ouvertes CityLine by Loogart">
+                        </div>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/upa/upa-cityline-2015-zoomer.jpg" alt="upa-portes-ouvertes-2015-cityline-by-loogart-green-edition" title="2015 UPA Portes Ouvertes CityLine by Loogart (green edition)">
+                        </div>
+                        <div class="carousel-cell"></div>
                     </div>
                 </div>
             </div>
+
+            <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                    <h3>2016 Edition</h3>
+                    <p>The 2016 edition was updated by Loogart since the Portes Ouvertes event moved from the Parc Jean-Drapeau to Parc Olympique. More emphasis was visually added to the Olympic Stadium and the design was slightly simplified. Event <a href="http://portesouvertes.upa.qc.ca/site2016/regions/outaouais-laurentides" target="_blank">website</a> features the design.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="carousel">
+                    <div class="upa-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/upa/upa-cityline-2016.jpg" alt="upa-portes-ouvertes-2016-cityline-by-loogart" title="2016 UPA Portes Ouvertes CityLine by Loogart">
+                        </div>
+                        <div class="carousel-cell"></div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- fourth section: Story about artwork -->
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                    <h3>TV Commercial</h3>
+                    <p>The TV commercial airs on television and on Youtube several weeks prior to the event to create event awareness. Animation and videography by <a href="http://www.onechuck.com" target="_blank">OneChuck Productions</a>.</p>
+                    <!-- 16:9 aspect ratio -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oIxlyeUBO_g" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <hr>
+                    <div class="embed-responsive embed-responsive-16by9">
+                    <iframe src="https://player.vimeo.com/video/183359470" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+                    <p><a href="https://vimeo.com/183359470">UPA Portes Ouvertes 2016</a> from <a href="https://vimeo.com/onechuck">oneChuck Productions</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+                </div>
+
+            </div>
+            
+                        <!-- Second section: Other Cities CityLines -->
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
+                    <h3>On the streets</h3>
+                    <p>The CityLine designs were transformed into posters and featured on the UPA's Portes Ouvertes website since 2015.</p>
+                    <img class="img-responsive img-spacing" src="../img/portfolio/upa/upa-metro-poster.jpg" data-action="zoom">
+                    <img class="img-responsive img-spacing" src="../img/portfolio/upa/upa-website.jpg" data-action="zoom">
+                </div>
+            </div>
+
         </section>
 
-        <!-- in-portfolio navigation -->
-
+        <!-- back to home page -->
         <div class="row">
             <div class="container">
                 <p class="cta-back">
@@ -143,6 +157,7 @@
 
     </div>
     <!-- /container -->
+
 
     <!-- footer -->
     <footer>
@@ -194,6 +209,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/zoom.min.js"></script>
+    <script src="../js/flickity.pkgd.min.js"></script>
     <script src="../js/loogart.js"></script>
 </body>
 
