--- a/projects/starbucks-cityscape-illustration.html
+++ b/projects/starbucks-cityscape-illustration.html
@@ -58,8 +58,6 @@
 
     <!-- champion image -->
     <div class="project-jumbotron project-starbucks-img">
-        <div class="col-sm-4 col-sm-offset-4 text-center">
-        </div>
     </div>
 
 
@@ -68,7 +66,8 @@
 
         <!-- back to home page -->
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
@@ -80,14 +79,16 @@
 
             <!-- First section: Starbucks Montreal -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <img class="img-responsive" src="../img/Starbucks_logo.png" style="max-width:100px;margin:30px 0">
                     <h1>Starbucks Cityscapes</h1>
                     <p>Starbucks was looking for elegant and locally relevant visuals which would be used as marketing materials for all the opening stores in Quebec, specifically in Montreal, Quebec City and several other towns within the province.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>The three Cityscapes</h3>
                     <p>The three cityscapes were created with a handcrafted painbrush look, with layers of green derived from the Starbucks color palette and with whimsical characters interacting with coffee made by Starbucks.</p>
                 </div>
@@ -111,7 +112,8 @@
 
             <!-- Second section: Other Cities CityLines -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>Layered design</h3>
                     <p>The cityscapes were then superimposed onto photographs of three different forms of coffee: latte, coffee bean and espresso. This created the underlying design of the marketing text.</p>
                     <img class="img-responsive img-spacing" src="../img/portfolio/starbucks/starbucks-artwork-2.jpg" data-action="zoom">
@@ -122,7 +124,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>On the streets</h3>
                     <p>Photography of several installations with the Starbucks Opening Stores artwork in the Montreal area.</p>
                 </div>
@@ -152,7 +155,8 @@
 
             <!-- fourth section: Story about artwork -->
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+
                     <h3>Art direction by BBDO</h3>
                     <p>Starbucks illustrators and designers communicate its brand through art. Artwork needs to be created based on Starbucks' visual principles: artful, elevated, layered, handcrafted, whimsical, experiential and derived from culture.</p>
                     <p>We worked with BBDO very closely to produce the perfect visual balance for these pieces of art which would be used as a marketing vehicle for new stores being setup in cities within the Quebec provice.</p>
