--- a/portraits-loog-a-day.html
+++ b/portraits-loog-a-day.html
@@ -117,8 +117,13 @@
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-spiderman.gif" alt="Animated portrait of Spiderman by Loogart" title="Spiderman" data-action="zoom">
                 </div>
-                <div class="col-xs-6 col-sm-3 col-md-2">
+                <!--<div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-batman-hires.gif" alt="Animated portrait of Batman by Loogart" title="Batman" data-action="zoom">
+                </div>-->
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <video width="100%" controls="" loop="loop" style="margin:15px auto 0">
+                        <source src="videos/imbatman.m4v" type="video/mp4"> Your browser does not support HTML5 video.
+                    </video>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-adele.png" alt="portrait of singer Adele" title="Adele" data-action="zoom">
@@ -344,7 +349,7 @@
         </section>
 
         <!-- Navigation -->
-       
+
         <div class="row">
             <div class="container">
                 <p class="cta-back">
