added 2 more videos as test

--- a/portraits-loog-a-day.html
+++ b/portraits-loog-a-day.html
@@ -87,8 +87,13 @@
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-mr-bean-hires.gif" alt="Animated portrait of comedian Mr. Bean by Loogart" title="Mr. Bean" data-action="zoom">
                 </div>
-                <div class="col-xs-6 col-sm-3 col-md-2">
+                <!--<div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-ice-cube-nwa.gif" alt="Animated portrait of Hip Hop Rap artist Ice Cube" title="Ice Cube" data-action="zoom">
+                </div>-->
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <video class="video-responsive"  width="100%" controls="" loop="loop" poster="img/loogs/loog-ice-cube-nwa.gif" title="Ice Cube">
+                        <source src="videos/ice-cube.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+                    </video>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-ironman-hires.gif" alt="Animated portrait of Ironman by Loogart" title="Ironman" data-action="zoom">
@@ -99,9 +104,14 @@
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-pk-subban.gif" alt="Animated portrait of NHL's PK Subban by Loogart" title="PK Subban" data-action="zoom">
                 </div>
-                <div class="col-xs-6 col-sm-3 col-md-2">
+                <!--<div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-bruno-mars.gif" alt="Animated portrait of pop singer Bruno Mars by Loogart" title="Bruno Mars" data-action="zoom">
-                </div>
+                </div>-->
+                <div class="col-xs-6 col-sm-3 col-md-2">
+                    <video class="video-responsive"  width="100%" controls="" loop="loop" poster="img/loogs/loog-bruno-mars.gif" title="Bruno Mars">
+                        <source src="videos/bruno-mars.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+                    </video>
+                </div>                
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <img class="img-responsive lazy" data-original="img/loogs/loog-snoop-dogg.jpg" alt="Portrait of the Godfather of Rap Snoop Dogg by Loogart" title="Snoop Dogg" data-action="zoom">
                 </div>
@@ -121,7 +131,7 @@
                     <img class="img-responsive lazy" data-original="img/loogs/loog-batman-hires.gif" alt="Animated portrait of Batman by Loogart" title="Batman" data-action="zoom">
                 </div>-->
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <video width="100%" controls="" loop="loop" style="margin:15px auto 0">
+                    <video class="video-responsive"  width="100%" controls="" loop="loop"  poster="img/loogs/loog-batman.gif" title="Batman">
                         <source src="videos/imbatman.m4v" type="video/mp4"> Your browser does not support HTML5 video.
                     </video>
                 </div>
