updated swiffer visuals in portfolio section

--- a/projects/swiffer-marketing-graphics.html
+++ b/projects/swiffer-marketing-graphics.html
@@ -64,7 +64,6 @@
         <!-- back to home page -->
         <div class="row">
             <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-
                 <p class="cta-back">
                     <a href="../index.html#selectedProjects" role="button">Back to projects</a>
                 </p>
@@ -86,6 +85,9 @@
             <div class="row">
                 <div class="carousel">
                     <div class="ets-carousel" data-flickity='{ "freeScroll": true }'>
+                        <div class="carousel-cell">
+                            <img class="img-portfolio" src="../img/portfolio/swiffer/swiffer-cityline-by-loogart-v1.jpg" alt="swiffer-montreal-cityline-by-loogart" title="Swiffer Montreal CityLine by Loogart">
+                        </div>
                         <div class="carousel-cell">
                             <img class="img-portfolio" src="../img/portfolio/swiffer/swiffer-cityline-by-loogart.jpg" alt="swiffer-montreal-cityline-by-loogart" title="Swiffer Montreal CityLine by Loogart">
                         </div>
