--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Loogart.</a>
+                <a class="navbar-brand" href="./">Loogart.</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="about">about</a></li>
                     <li><a href="#!">shop</a></li>
                     <li><a href="https://www.instagram.com/loogart/">ig</a></li>
                     <li><a href="https://www.facebook.com/LoogArt/">fb</a></li>
